src/pages/uploadRx/uploadSuccess/styles.scss
.success-rx-upload-container {
  display: flex;
  height: 100vh;
  width: 100%;
  background: linear-gradient(360deg, #b6b5f2 0%, #e2e2f4 100%);
  box-sizing: border-box;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  padding: 0 12px;
  .website-logo {
    width: 120px;
    height: auto;
    object-fit: contain;
    position: absolute;
    top: 17px;
    left: 12px;
  }
  .success-content {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    height: 100%;
    width: 100%;
    .success-icon {
      width: 100%;
      height: auto;
      display: flex;
      align-items: center;
      justify-content: center;
      img {
        object-fit: contain;
        width: 254px;
        height: auto;
      }
    }
    .success-text {
      padding: 15px 26px;
      text-align: center;
      line-height: 24px;
    }
    .success-title {
      font-size: 16px;
      font-weight: 600;
      color: #4b4ad5;
      margin-bottom: 5px;
    }
    .success-description {
      font-size: 14px;
      font-weight: 400;
      color: #4b4ad5;
    }
    .patient-info-card-container {
      margin: 0 12px;
      position: relative;
      .patient-info-card-success {
        background-color: #e1e1f9 !important;
        border-color: #e4e7eb !important;
      }
    }
    .book-appointment-btn {
      margin: 0px 12px;
      width: calc(100% - 24px);
      height: 48px;
      border-radius: 12px;
      background-color: #4b4ad5;
      position: fixed;
      bottom: 12px;
      left: 0px;
      right: 0px;
      z-index: 100;
    }
  }
}

